--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=86400000
+jwt.expiration=18000
 
 spring.datasource.url=jdbc:h2:mem:user-register
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
